--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,3 +1,13 @@
 .outline-div {
   outline: 1px solid black;
 }
+
+.red-team {
+  background-color: #ee8c68;
+  background-image: linear-gradient(315deg, #ee8c68 0%, #eb6b9d 74%);
+}
+
+.green-team {
+  background-color: #4dccc6;
+  background-image: linear-gradient(315deg, #4dccc6 0%, #96e4df 74%);
+}
